call to action mobile fixes

--- a/style.css
+++ b/style.css
@@ -132,7 +132,7 @@ section.hero > * {
 }
 
 .illustration > img {
-  max-width: 100%;
+  width: 100%;
   height: 15rem;
   object-fit: cover;
 }
@@ -227,8 +227,9 @@ main {
     padding: 2rem;
     margin: auto;
   }
-
-  .illustration > img {
-    width: 100%;
+}
+@media screen and (min-width: 1400px) {
+  section.call-to-action {
+    width: 50%;
   }
 }
